<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.appimc.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/resultado"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="130dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtHeight"
        android:layout_width="302dp"
        android:layout_height="60dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="#01579B"
        android:hint="@string/altura_Ex_1_75m"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="#0D47A1"
        android:textColorHint="#0D47A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btCalculate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textColor="#00CCFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWeight"
        app:layout_constraintVertical_bias="0.055"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtWeight"
        android:layout_width="302dp"
        android:layout_height="65dp"
        android:backgroundTint="#01579B"
        android:hint="@string/peso_ex_78kg"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="#0D47A1"
        android:textColorHint="#0D47A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeight"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/limpar"
        android:textColor="#00CCFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sair"
        android:textColor="#00CCFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calc"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>